--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.2.0",
     "react-native": "0.53.0",
     "react-native-geocoding": "^0.2.0",
+    "react-native-google-places": "^2.4.2",
     "react-native-maps": "^0.20.1"
   },
   "devDependencies": {
